istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-ns1
  namespace: ns1
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver-gw-vs
  namespace: ns1
spec:
  hosts:
    - "*"
  gateways:
    - gateway-ns1
  http:
    - route:
         - destination:
            host: echoserver-service-ns1
            port:
              number: 80
