allow-inbound-echo-ns1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-inbound-echo-ns1
  namespace: ns1
spec:
  selector:
    matchLabels:
      app: echoserver-app-ns1
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
